<resources>
    <string name="app_name">CryptoFunding</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tool_smallnumber">10.45</string>
    <string name="eth_indicator">ETH</string>
    <string name="selected_info">Sélectionné</string>
    <string name="nowallet">Vous n\'avez enregistré aucun portefeuille</string>
    <string name="available_amount">Montant disponible</string>
    <string name="notifications">Notifications</string>
    <string name="no_selected_wallet">Aucun portefeuille sélectionné</string>
    <string name="my_wallets">Mes portefeuilles</string>
    <string name="walletname_hint">Nom</string>
    <string name="walletpassword_hint">Mot de passe</string>
    <string name="create">Creer</string>
    <string name="import_text">Importer</string>
    <string name="walletprivatekey_hint">Clé privée</string>
    <string name="error_occured">Une erreur est survenue</string>
    <string name="categories_info">Catégories</string>
    <string name="categoryContentDesc">Category Logo</string>
    <string name="trending">Populaires</string>
    <string name="homeBottomNav">Accueil</string>
    <string name="homeBottomFav">Favoris</string>
    <string name="homeBottomProjects">Projets</string>
    <string name="seeMore">Voir plus</string>
    <string name="percentDone">%1$d%% financé</string>
    <string name="funded_projects">Projets financés</string>
    <string name="my_projects">Mes projets</string>
    <string name="create_wallet">Nouveau portefeuille</string>
    <string name="enter_password">Entrez votre mot de passe</string>
    <string name="export_key">Exporter ma clé privée</string>
    <string name="export">Exporter</string>
    <string name="incorrect_password">Mauvais mot de passe</string>
    <string name="private_key_warning">Conservez cette clé privée dans un lieu sécurisé et ne la divulguez à personne !</string>
    <string name="copy">Copier</string>
    <string name="copied">Votre clé privée a été copiée dans votre presse-papier</string>
    <string name="wallet_deleted">Le portefeuille a été supprimé</string>
    <string name="cancel">Annuler</string>
    <string name="collected">Collecté</string>
    <string name="steps">Étapes</string>
    <string name="projectNameHint">Nom du projet</string>
    <string name="projectSummaryHint">Décrivez votre projet en quelques lignes</string>
    <string name="chooseCategory">Choisissez une catégorie</string>
    <string name="uploadImages">Importez vos images</string>
    <string name="next">Suivant</string>
    <string name="add_new_task">Ajouter une nouvelle tâche</string>
    <string name="launch_project">Lancer le projet</string>
    <string name="taskNameHint">Titre de votre tâche</string>
    <string name="amountNeededHint">Montant demandé</string>
    <string name="taskSummaryHint">Expliquez votre tâche</string>
    <string name="add">Ajouter</string>
    <string name="add_date">Quand sera fini cette tâche</string>
    <string name="chooseDateHint">Indiquez la date à laquelle votre tâche sera terminée</string>
    <string name="create_project">Création du projet</string>
    <string name="create_tasks">Créations des tâches</string>
    <string name="percentFinanced">%1$d%% financé</string>
    <string name="noWallet">Connectez vous à un portefeuille pour voir les favoris qui lui sont associés</string>
    <string name="eth_suffix">%1$s ETH</string>
    <string name="finance">Financer</string>
    <string name="amount">Montant:</string>
    <string name="amountHint">0.0</string>
    <string name="continu">Continuer</string>
    <string name="wallet">Portefeuille:</string>
</resources>
