<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryApp"
    tools:context=".CreateWalletFragment">

    <EditText
        android:id="@+id/createwallet_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittext_background"
        android:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/createwallet_password"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/walletname_hint"
        android:textColorHint="@color/colorSecondaryAppGradient"
        android:fontFamily="@font/opensans_regular"
        android:paddingStart="49dp"
        android:paddingEnd="20dp"
        android:textColor="@color/colorBackgroundWhiteApp" />

    <EditText
        android:id="@+id/createwallet_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittext_background"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createwallet_login"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/walletpassword_hint"
        android:textColorHint="@color/colorSecondaryAppGradient"
        android:fontFamily="@font/opensans_regular"
        android:paddingStart="49dp"
        android:paddingEnd="20dp"
        android:textColor="@color/colorBackgroundWhiteApp"/>
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:text="@string/create"
        android:textSize="21sp"
        android:textColor="@color/colorBackgroundWhiteApp"
        android:fontFamily="@font/opensans_semibold"
        android:background="@drawable/button_background"
        android:elevation="6dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>