<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryApp"
    tools:context=".CreateWalletFragment">

    <EditText
        android:id="@+id/importwallet_login"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:background="@drawable/edittext_background"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/importwallet_privatekey"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/walletname_hint"
        android:lines="1"
        android:textColorHint="@color/colorSecondaryAppGradient"
        android:fontFamily="@font/opensans_regular"
        android:paddingStart="49dp"
        android:paddingEnd="20dp"
        android:textColor="@color/colorBackgroundWhiteApp"
        android:layout_marginBottom="30dp"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:id="@+id/importwallet_privatekey"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:background="@drawable/edittext_background"
        android:elevation="5dp"
        android:lines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/importwallet_password"
        app:layout_constraintTop_toBottomOf="@+id/importwallet_login"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/walletprivatekey_hint"
        android:textColorHint="@color/colorSecondaryAppGradient"
        android:fontFamily="@font/opensans_regular"
        android:paddingStart="49dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/colorBackgroundWhiteApp"/>

    <EditText
        android:id="@+id/importwallet_password"
        android:layout_width="312dp"
        android:layout_height="40dp"
        android:background="@drawable/edittext_background"
        android:elevation="5dp"
        android:lines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_importwallet"
        app:layout_constraintTop_toBottomOf="@+id/importwallet_privatekey"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/walletpassword_hint"
        android:textColorHint="@color/colorSecondaryAppGradient"
        android:fontFamily="@font/opensans_regular"
        android:paddingStart="49dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorBackgroundWhiteApp"/>

    <Button
        android:id="@+id/button_importwallet"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginStart="13dp"
        android:text="@string/import_text"
        android:textSize="21sp"
        android:textColor="@color/colorBackgroundWhiteApp"
        android:fontFamily="@font/opensans_semibold"
        android:background="@drawable/button_background"
        android:elevation="6dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>