<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryApp"
    tools:context=".WalletListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wallet_list_detailview"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:background="@drawable/bottomleft_rounded_background"
        android:elevation="6dp"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="?attr/actionBarSize"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/wallet_list_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/right_rounded_background"
            android:fontFamily="@font/opensans_semibold"
            android:paddingStart="9dp"
            android:paddingTop="5dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"
            android:text="@string/selected_info"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/wallet_list_detailname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wallet_list_selected"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="14dp"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:textSize="18sp"
            android:fontFamily="@font/opensans_bold"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/wallet_list_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wallet_list_detailname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            android:layout_marginTop="14dp"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:textSize="12sp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/available_amount" />

        <TextView
            android:id="@+id/wallet_list_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wallet_list_available"
            app:layout_constraintStart_toStartOf="@id/wallet_list_available"
            app:layout_constraintEnd_toEndOf="@id/wallet_list_available"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:textSize="18sp"
            android:fontFamily="@font/opensans_bold"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/wallet_list_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wallet_list_amount"
            app:layout_constraintStart_toStartOf="@id/wallet_list_available"
            app:layout_constraintEnd_toEndOf="@id/wallet_list_available"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:textSize="16sp"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/eth_indicator"/>

        <TextView
            android:id="@+id/wallet_list_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/wallet_list_available"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:textSize="12sp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/notifications" />

        <TextView
            android:id="@+id/wallet_list_notifamount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wallet_list_notification"
            app:layout_constraintStart_toStartOf="@id/wallet_list_notification"
            app:layout_constraintEnd_toEndOf="@id/wallet_list_notification"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:textSize="18sp"
            android:fontFamily="@font/opensans_bold"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/wallet_list_noselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wallet_list_selected"
            app:layout_constraintBottom_toBottomOf="@id/wallet_list_detailview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:fontFamily="@font/opensans_regular"
            android:textStyle="italic"
            android:text="@string/no_selected_wallet" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wallet_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="235dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wallet_list_nowallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_regular"
        android:text="@string/nowallet"
        android:textColor="@color/colorBackgroundWhiteApp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wallet_list_detailview"
        app:layout_constraintVertical_bias="0.2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/wallet_list_addwallet_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:borderWidth="0dp"
        android:backgroundTint="@color/colorBackgroundGradientApp"/>


</androidx.constraintlayout.widget.ConstraintLayout>