<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    android:id="@+id/motionLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layoutDescription="@xml/scene_finance"
    android:background="@drawable/background_bottom_sheet"
    android:clipToPadding="false">

    <View
        android:id="@+id/topBar"
        android:layout_width="90dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:background="@color/colorBackgroundWhiteApp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/amountLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/amount"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:textSize="18sp"
            android:fontFamily="@font/robotomedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        
        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="270dp"
            android:layout_height="82dp"
            android:background="@drawable/background_edittext_large"
            app:layout_constraintTop_toBottomOf="@id/amountTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:hint="@string/amountHint"
            android:inputType="numberDecimal"
            android:gravity="center"
            android:textColorHint="@color/colorWhite50"
            android:textSize="35sp"
            android:textColor="@color/colorBackgroundWhiteApp" />

        <TextView
            android:id="@+id/ethTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eth_indicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amountEditText"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:layout_marginTop="5dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/walletLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/walletTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/wallet"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:textSize="18sp"
            android:fontFamily="@font/robotomedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/walletPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/walletTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:paddingStart="183dp"
            android:paddingEnd="183dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/bottomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button_state"
        app:layout_constraintTop_toBottomOf="@id/amountLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/continu"
        android:textColor="@color/colorBackgroundWhiteApp"
        android:fontFamily="@font/robotomedium"/>

</androidx.constraintlayout.motion.widget.MotionLayout>