<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.cryptofunding.viewmodel.AddTaskViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/background_bottom_sheet"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <View
            android:id="@+id/topBar"
            android:layout_width="90dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:background="@color/colorBackgroundWhiteApp"/>

        <EditText
            android:id="@+id/taskNameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topBar"
            android:background="@drawable/selector_edit_projectname"
            android:elevation="4dp"
            android:hint="@string/taskNameHint"
            android:lines="1"
            android:textColorHint="@color/colorSecondaryAppGradient"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:text="@={viewModel.taskName}"/>

        <EditText
            android:id="@+id/taskAmountEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taskNameEditText"
            android:background="@drawable/selector_edit_middle"
            android:elevation="4dp"
            android:hint="@string/amountNeededHint"
            android:inputType="numberDecimal"
            android:lines="1"
            android:textColorHint="@color/colorSecondaryAppGradient"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:text="@={viewModel.taskAmount}"/>

        <EditText
            android:id="@+id/taskSummaryTextView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taskAmountEditText"
            android:background="@drawable/selector_edit_projectsummary"
            android:gravity="top"
            android:elevation="4dp"
            android:hint="@string/taskSummaryHint"
            android:textColorHint="@color/colorSecondaryAppGradient"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:text="@={viewModel.taskSummary}"/>

        <Button
            android:id="@+id/buttonAddTask"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@id/dateLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="13dp"
            android:layout_marginTop="13dp"
            android:textSize="21sp"
            android:textColor="@color/colorBackgroundWhiteApp"
            android:fontFamily="@font/opensans_semibold"
            android:background="@drawable/selector_button_state"
            android:elevation="6dp"
            android:text="@string/add"
            android:enabled="@{viewModel.canProceed}"/>

        <LinearLayout
            android:id="@+id/dateLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/taskSummaryTextView"
            android:layout_marginTop="13dp"
            android:background="@drawable/background_edit_date"
            android:orientation="horizontal"
            android:weightSum="6">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/calendar"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/dateFrameLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5">

                <EditText
                    android:id="@+id/dateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorBackgroundWhiteApp"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="16sp"
                    android:hint="@string/add_date"
                    android:textColorHint="@color/colorSecondaryAppGradient"
                    android:background="@android:color/transparent"
                    android:focusable="false"
                    android:text="@={viewModel.taskFinalDate}"/>

            </FrameLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>